<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_white_24"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/baseline_favorite_white_24"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/baseline_settings_white_24"
        android:title="@string/setting"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>