<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:shimmer_auto_start="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_x2"
            android:layout_marginEnd="@dimen/dimen_x2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo_user_placeholder"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dimen_x1"
                android:layout_marginBottom="@dimen/dimen_x1"
                android:background="@color/colorAccent"
                android:contentDescription="@string/user_image_content_description"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="1dp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_x2"
                android:layout_marginEnd="@dimen/dimen_x2"
                android:layout_toStartOf="@+id/btn_favorite_placeholder"
                android:layout_toEndOf="@id/iv_photo_user_placeholder"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="Testing User Github"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_half"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="Indonesia"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_half"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="Google. Inc"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_favorite_placeholder"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/colorAccent"
                android:contentDescription="@string/favorite" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_x2"
            android:layout_marginTop="@dimen/dimen_x1"
            android:layout_marginEnd="@dimen/dimen_x2"
            android:layout_marginBottom="@dimen/dimen_x1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="@string/user_detail_repository_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_half"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="8000"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="@string/user_detail_follower_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_half"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="8000"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="@string/user_detail_following_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_half"
                    android:background="@color/colorAccent"
                    android:ellipsize="end"
                    android:text="8000"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabIndicatorColor="@color/colorTabIndicator"
            app:tabSelectedTextColor="@color/colorTabIndicator"
            app:tabTextColor="@color/colorWhite" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />

                <include layout="@layout/item_user_placeholder" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</com.facebook.shimmer.ShimmerFrameLayout>